--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="navbar">
   <span><a href="./">GDPSFH</a></span>
   <ul>
-    <li class="active"><a href="index.php">Home</a><li><a href="about.php">About</a></li><li><a href="privacy.php">Privacy</a></li>    <li><a href="https://panel.fhgdps.com/">Login</a></li>
+    <li class="active"><a href="index.php">Home</a><li><a href="about.php">About</a></li><li><a href="privacy.php">Privacy</a></li>    
   </ul>
 </div>
 
