--- a/privacy/index.html
+++ b/privacy/index.html
@@ -12,7 +12,7 @@
 <div class="navbar">
   <span><a href="./">uwunot</a></span>
   <ul>
-    <li><a href="index.php">Home</a></li><li><a href="pricing.php">Pricing</a></li><li><a href="about.php">About</a></li><li class="active"><a href="privacy.php">Privacy</a></li>    
+    <li><a href="../">Home</a></li><li><a href="about">About</a></li><li class="active"><a href="privacy.php">Privacy</a></li>    
   </ul>
 </div>
 
