--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,8 @@
 <div class="navbar">
   <span><a href="./">GDPSFH</a></span>
   <ul>
-    <li><a href="../">Home</a></li><li class="active"><a href="about">About</a></li><li><a href="privacy">Privacy</a></li>   
+    <li class="active"><a href="../">Home</a><li><a href="../about">About</a></li><li><a href="../privacy">Privacy</a></li>    
+  </ul>
 </div>
 
 <div class="hero-section">
