--- a/privacy/index.html
+++ b/privacy/index.html
@@ -10,9 +10,9 @@
 <body>
 
 <div class="navbar">
-  <span><a href="./">uwunot</a></span>
+  <span><a href="./">GDPSFH</a></span>
   <ul>
-    <li><a href="../">Home</a></li><li><a href="about">About</a></li><li class="active"><a href="privacy.php">Privacy</a></li>    
+    <li class="active"><a href="../">Home</a></li><li><a href="../about">About</a></li><li><a href="../privacy">Privacy</a></li>    
   </ul>
 </div>
 
