--- a/privacy/index.html
+++ b/privacy/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +9,7 @@
 <body>
 
 <div class="navbar">
-  <span><a href="./">GDPSFH</a></span>
+  <span><a href="./">uwunot</a></span>
   <ul>
     <li class="active"><a href="../">Home</a></li><li><a href="../about">About</a></li><li><a href="../privacy">Privacy</a></li>    
   </ul>
