--- a/privacy/index.html
+++ b/privacy/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>uwunot</title>
-<link rel="stylesheet" href="./assets/main.css">
-</head>
+<title>UWUNOT</title>
+<link rel="stylesheet" href="./assets/main.css"></head>
 <body>
+
 
 <div class="navbar">
   <span><a href="./">uwunot</a></span>
