--- a/about/index.html
+++ b/about/index.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>UWUNOT</title>
-<link rel="stylesheet" href="./assets/main.css">
-</head>
+<link rel="stylesheet" href="./assets/main.css"></head>
 <body>
+
 
 <div class="navbar">
   <span><a href="./">uwunot</a></span>
