--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rick GDPS Official Website | Most Popular GDPS on TikTok</title>
+    <title>UWUNOT Official Website</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Import the required font using Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -34,8 +34,8 @@
     </header>
     
     <section class="hero">
-<img src="https://www.rickgdps.xyz/files/logo1.png" class="icon">
-        <h2>Welcome to UWUNO!!</h2>
+<img src="https://uwunotislove.github.io/assets/uwunot.png" class="icon">
+        <h2>Welcome to UWUNOT!!</h2>
         <p>UWUNOT is a project owned by Not733402</p>
         <p class="note">By viewing our website you agree to the terms and conditions of UWUNOT. <a href="../terms">Click here</a> to view the terms and conditions.</p>
     </section>
