--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <nav>
             <h1>UWUNOT</h1>
             <ul>
-                <li><a href="download.html">Info</a></li>
-                <li><a href="tools.html">About US</a></li>
-                <li><a href="/lists">Terms</a></li>
-                <li><a href="credits.html">Credits</a></li>
+                <li><a href="../info">Info</a></li>
+                <li><a href="../aboutus">About US</a></li>
+                <li><a href="../terms">Terms</a></li>
+                <li><a href="../credits">Credits</a></li>
             </ul>
         </nav>
     </header>
