--- a/index.html
+++ b/index.html
@@ -1,21 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DSC609KM7G"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-DSC609KM7G');
-</script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9138741540234649"
-     crossorigin="anonymous"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UWUNOT Official Website</title>
-    <link rel="stylesheet" href="styles.css">
     <!-- Import the required font using Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
@@ -36,7 +21,7 @@
     <section class="hero">
 <img src="https://uwunotislove.github.io/assets/uwunot.png" class="icon">
         <h2>Welcome to UWUNOT!!</h2>
-        <p>UWUNOT is a project owned by Not733402</p>
+        <p>UWUNOT is a NON-profit project owned by Not733402 Providing services for free and without any ads</p>
         <p class="note">By viewing our website you agree to the terms and conditions of UWUNOT. <a href="../terms">Click here</a> to view the terms and conditions.</p>
     </section>
 
