--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="hero">
 <img src="https://uwunotislove.github.io/assets/uwunot.png" class="icon">
         <h2>Welcome to UWUNOT!!</h2>
-        <p>UWUNOT is a NON-profit project owned by Not733402 Providing services for free and without any ads</p>
+        <p>UWUNOT is a NON-profit organazation owned by Not733402 Providing services for free and without any ads</p>
         <p class="note">By viewing our website you agree to the terms and conditions of UWUNOT. <a href="../terms">Click here</a> to view the terms and conditions.</p>
     </section>
 
