--- a/terms/index.html
+++ b/terms/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     
-    section class="hero">
+    <section class="hero">
 <img src="https://uwunotislove.github.io/assets/uwunot.png" class="icon">
               <h1>Terms and Conditions</h1>
         
