--- a/terms/index.html
+++ b/terms/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <h1>UWUNOT</h1>
+            <li><a herf="../">UWUNOT</li>
             <ul>
                 <li><a href="../info">Info</a></li>
                 <li><a href="../aboutus">About US</a></li>
@@ -26,7 +26,7 @@
     Welcome to UWUNOT. By using our website, you agree to comply with and be bound by the following terms and conditions. Please review these terms carefully. If you do not agree to these terms, you should not use this website.
 </p>
     </section>
- <h1>Terms and Conditions</h1>
+<h1>Terms and Conditions</h1>
 <p>Last updated: October 22, 2024</p>
 <p>Please read these terms and conditions carefully before using Our Service.</p>
 <h2>Interpretation and Definitions</h2>
