--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <h1>UWUNOT</h1>
+            <li><a herf="../">UWUNOT</li>
             <ul>
                 <li><a href="../info">Info</a></li>
                 <li><a href="../aboutus">About US</a></li>
