--- a/privacy/index.html
+++ b/privacy/index.html
@@ -114,12 +114,12 @@ authority</a>.</p>
 <h3 class="code-line" data-line-start="138" data-line-end="139"><a id="10_HOW_CAN_YOU_CONTACT_US_ABOUT_THIS_NOTICE_138"></a>10. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</h3>
 <p class="has-line-data" data-line-start="140" data-line-end="141">If you have questions or comments about this notice, you may contact us via email at UWUNOT&thinsp;[at]&thinsp;gmail&thinsp;[dot]&thinsp;com.</p>
 <h3 class="code-line" data-line-start="142" data-line-end="143"><a id="11_HOW_CAN_YOU_REVIEW_UPDATE_OR_DELETE_THE_DATA_WE_COLLECT_FROM_YOU_142"></a>11. HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</h3>
-<p class="has-line-data" data-line-start="144" data-line-end="145">You have the right to request access to the personal information we collect from you, details about how we have processed it, correct inaccuracies, or delete your personal information. You may also have the right to withdraw your consent to our processing of your personal information. These rights may be limited in some circumstances by applicable law. To request to review, update, or delete your personal information, please visit: <a href="https://panel.fhgdps.com/">https://panel.fhgdps.com/</a> or email us at UWUNOT&thinsp;[at]&thinsp;gmail&thinsp;[dot]&thinsp;com.</p>
+<p class="has-line-data" data-line-start="144" data-line-end="145">You have the right to request access to the personal information we collect from you, details about how we have processed it, correct inaccuracies, or delete your personal information. You may also have the right to withdraw your consent to our processing of your personal information. These rights may be limited in some circumstances by applicable law. To request to review, update, or delete your personal information, please email us at Not733402&thinsp;[at]&thinsp;gmail&thinsp;[dot]&thinsp;com.</p>
   </div>
   <br>
 
 <footer>
-<p>All Right Reserved | <a href="#"><span style="color: lightblue;">RICK GDPS 2024</span></a></p>
+<p>All Right Reserved | <a href="#"><span style="color: lightblue;">UWUNOT 2024</span></a></p>
 
 </footer>
 
