--- a/terms/index.html
+++ b/terms/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <li><a herf="../">UWUNOT</li>
+            <span><a href="./">UWUNOT</a></span>
             <ul>
                 <li><a href="../info">Info</a></li>
                 <li><a href="../aboutus">About US</a></li>
