--- a/privacy/index.html
+++ b/privacy/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <li><a href="../">UWUNOT</a></li>
+            <span><a href="./">UWUNOT</a></span>
             <ul>
                 <li><a href="https://www.rickgdps.xyz">Home</a></li>
                 <li><a href="terms.html">Terms and Conditions</a></li>
