--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -10,7 +10,7 @@
   
 
 <div class="navbar">
-  <span><a href="../">Uwunot</a></span>
+  <span><a href="./">UWUNOT</a></span>
   <ul>
     <li><a href="../">Home</a></li><li class="active"><a href="../aboutus">About</a></li><li><a href="../terms">terms</a></li>
   </ul>
