--- a/privacy/index.html
+++ b/privacy/index.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <nav>
-            <span><a href="./">UWUNOT</a></span>
+            <a href="https://uwunotislove.is-a.dev/">UWUNOT</a>
             <ul>
-                <li><a href="https://www.rickgdps.xyz">Home</a></li>
-                <li><a href="terms.html">Terms and Conditions</a></li>
+                <li><a href="https://uwunotislove.is-a.dev/">Home</a></li>
+                <li><a href="https://uwunotislove.is-a.dev/terms">Terms and Conditions</a></li>
             </ul>
         </nav>
     </header>
