--- a/privacy/index.html
+++ b/privacy/index.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <nav>
-            <a href="https://uwunotislove.is-a.dev/">UWUNOT</a>
+            <a href="https://uwunotislove.is-a.dev">UWUNOT</a>
             <ul>
-                <li><a href="https://uwunotislove.is-a.dev/">Home</a></li>
+                <li><a href="https://uwunotislove.is-a.dev">Home</a></li>
                 <li><a href="https://uwunotislove.is-a.dev/terms">Terms and Conditions</a></li>
             </ul>
         </nav>
